# Aurora-Shell

./: .gitignore  README.md  aurora-colors.css  config.json  meson.build  project_dump.txt
daemons/: meson.build
daemons/aurora-osd-daemon/: Cargo.toml  meson.build
daemons/aurora-osd-daemon/src/: main.rs
daemons/auroralauncherd/: Cargo.toml  meson.build
daemons/auroralauncherd/src/: clipboard.rs  main.rs
daemons/auroramediad/: Cargo.toml  meson.build
daemons/auroramediad/src/: main.rs
daemons/auroranotify-ui/: auroranotify-ui.c  island_widget.c  island_widget.h  meson.build  privacy_widget.c  privacy_widget.h
daemons/auroranotifyd/: auroranotifyd.c  meson.build
daemons/aurorawidgetd/: Cargo.toml  meson.build
daemons/aurorawidgetd/src/: main.rs
daemons/insight-daemon/: insight-daemon.c  meson.build
daemons/privacy-daemon/: meson.build  privacy-daemon.c
src/aurora-shell/: main.c  meson.build
surfacedesk/: meson.build
surfacedesk/scenes/: registry.c  registry.h
surfacedesk/scenes/clock/: main.c
surfacedesk/scenes/media/: main.c
surfacedesk/scenes/system/: main.c
surfacedesk/scenes/text/: main.c
surfacedesk/scenes/weather/: main.c
surfacedesk/src/: drawer.c  drawer.h  editor.c  editor.h  globals.h  main_gtk.c  storage.c  storage.h  theme_manager.c  theme_manager.h  wallpaper_chooser.c  wallpaper_chooser.h  widget_template.c  widget_template.h
surfacedesk/src/backend/: Cargo.toml
surfacedesk/src/backend/src/: lib.rs  media.rs  system.rs  theme.rs
templates/: aurora-colors-template.css
templates/cachy-selector/: cachy-selector-template.css  cachy-selector.css
templates/calendar/: calendar-template.css  calendar.css
templates/cheatsheet/: cheatsheet-template.css  cheatsheet.css
templates/control-center/: controlcenter-template.css  controlcenter.css
templates/controlcenter/: controlcenter.css
templates/insight/: insight-template.css  insight.css
templates/launcher/: launcher-template.css  launcher.css
templates/mpris-player/: mpris-player-template.css  mpris-player.css
templates/mpris_player/: mpris-player-template.css  mpris-player.css  style.css
templates/organizer/: organizer-template.css  organizer.css
templates/qscreen/: qscreen-template.css  qscreen.css
templates/thinkfan/: thinkfan.css
templates/topbar/: topbar-template.css  topbar.css
templates/uptime/: archbadge-template.css  archbadge.css
themer/: toggle-selector.sh  wallpaper.sh
widgets/: meson.build
widgets/cachy-selector/: cachy-selector.c  meson.build
widgets/calendar/: calendar.c  meson.build
widgets/cheatsheet/: cheatsheet.c  meson.build
widgets/control-center/: meson.build
widgets/control-center/backend/: Cargo.toml
widgets/control-center/backend/src/: lib.rs  netlib.rs
widgets/control-center/src/: audio_manager.c  audio_manager.h  bluetooth_manager.c  bluetooth_manager.h  bluetooth_scanner.c  bluetooth_scanner.h  main.c  network_manager.c  network_manager.h  qr.c  qr.h  system_monitor.c  utils.c  wifi_scanner.c  wifi_scanner.h
widgets/insight/: insight.c  meson.build
widgets/launcher/: launcher.c  launcher.h  meson.build
widgets/launcher/backend/: Cargo.toml
widgets/launcher/backend/src/: app.rs  calc.rs  lib.rs
widgets/launcher/modules/: apps.c  apps.h  calculator.c  calculator.h  commands.c  commands.h
widgets/mpris_player/: meson.build
widgets/mpris_player/src/: main.c  mpris.c  mpris.h
widgets/organizer/: meson.build
widgets/organizer/src/: calendar_widget.c  calendar_widget.h  eds_event_source.c  eds_event_source.h  mpris_widget.c  mpris_widget.h  organizer.c
widgets/qscreen/: meson.build  qscreen.c  qscreen.h  ui_state.h  utils.c  utils.h
widgets/qscreen/features/: annotation.c  annotation.h  annotation_ui.c  annotation_ui.h  eyedrop.c  eyedrop.h  ocr.c  ocr.h
widgets/thinkfan/: meson.build
widgets/thinkfan/src/: backend.c  backend.h  plugin.c  window.c  window.h
widgets/thinkfan/src/resources/: thinkfan-c.gresource.xml
widgets/topbar/: meson.build  topbar.c  topbar.h
widgets/topbar/modules/: audio.c  audio.h  bluetooth.c  bluetooth.h  clock.c  clock.h  popover_anim.c  popover_anim.h  sysinfo.c  sysinfo.h  systray.c  systray.h  workspaces.c  workspaces.h  zen.c  zen.h
widgets/uptime/: meson.build  uptime.c
widgets/uptime/backend/: Cargo.toml
widgets/uptime/backend/src/: lib.rs
